--- a/TCC/Views/Index.xaml
+++ b/TCC/Views/Index.xaml
@@ -194,7 +194,7 @@
                                 </Frame.GestureRecognizers>
                             </Frame>
 
-                            <!-- Botão Editar -->
+                            <!-- Botão Grupo -->
                             <Frame BackgroundColor="#FF0000" 
                                    CornerRadius="20" 
                                    Padding="10" 
